@@ -1,3 +1,8 @@
+2010-10-20  Dave Korn  <dave.korn.cygwin@gmail.com>
+
+	* ld-plugin/plugin.exp: Mark tests UNSUPPORTED, not UNRESOLVED, if
+	no suitable target compiler is available.
+
 2010-10-16  Kai Tietz  <kai.tietz@onevision.com>
 
 	* ld-pe/pe-run2.exp: Prefix --enable-auto-import by -Wl.
